# object-detector

./: .gitignore  CMakeLists.txt  Makefile  README.md  config-edge-detector.json.dist
src/: edge-detector.cpp
